--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,13 +15,12 @@ steps:
     versionSpec: '12.x'
   displayName: 'Install Node.js'
 
-- script: npm ci
-  displayName: 'npm install and build'
+- script: |
+     npm install
+  displayName: 'Instalar dependencias'
+  
+- script: |
+     npm test
+  displayName: 'Executar testes'
 
-- script: npm run cy:run:electron
-  displayName: 'Run tests on Electron'
-  continueOnError: true
 
-- script: npm run cy:run:chrome
-  displayName: 'Run tests on Chrome'
-  continueOnError: true
